manifests/admission-policies/prod-eu-central-1/validating-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: require-resource-constraints-binding
spec:
  policyName: require-resource-constraints
  validationActions:
    - Audit
  matchResources: {}
